# RAG-AI

./: .gitignore  README.md  embed_store.py  llm_client.py  load_data.py  main.py  pyproject.toml  requirement.txt  split_text.py
api-backend/: app.py
data/: policy.txt
